--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div id="app"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="js/vue"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/principal.js"></script>
   </body>
 </html>
