--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+          </div>            
+
+        </div>
+      </div>
+    </div>
+
+   
+    
+  </body>
     <script src="js/vue.js"></script>
     <script src="js/principal.js"></script>
-  </body>
 </html>
