--- a/index.html
+++ b/index.html
@@ -15,10 +15,29 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            
+            <h1>Agregar nota</h1>
+            <label>Nombre</label>
+            <input type="text" class="form-control" v-model="nombre">
+            <label for="">Promedio</label>
+            <input type="number" max="20" min="0" class="form-control" v-model="promedio">
+            <input type="button" value="Guardar" class="btn btn-success" v-on:click="agregarNota"> 
+          </div>               
+          <div class="col-md-6">
+            <h1 v-if="lista.lenght > 0">Lista de notas</h1>
+            <h1 v-else="lista">No exiten notas</h1>
+            <table class="table">
+              <tr v-for="item in lista" v-bind:style="item.estado ==false?'color:red':''">
+                <th v-text="item.nombre"></th>
+                <th v-text="item.promedio"></th>
+              </tr>
+            </table>
+          </div>
 
-          </div>            
-
+        </div>
+        <div class="row">
+          <div class="col-md-12 col-sm-12">
+            <p class="text-center">t.me/gerbi - @gerbidev</p>
+          </div>
         </div>
       </div>
     </div>
