--- a/index.html
+++ b/index.html
@@ -1,50 +1,32 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<html>
+<head>
+  <title>Hola Vue</title>
+  <meta charset="utf-8">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
+</head>
+<body>
+  <div class="container">
     <div id="app">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h1>Agregar nota</h1>
-            <label>Nombre</label>
-            <input type="text" class="form-control" v-model="nombre">
-            <label for="">Promedio</label>
-            <input type="number" max="20" min="0" class="form-control" v-model="promedio">
-            <input type="button" value="Guardar" class="btn btn-success" v-on:click="agregarNota"> 
-          </div>               
-          <div class="col-md-6">
-            <h1 v-if="lista.lenght > 0">Lista de notas</h1>
-            <h1 v-else="lista">No exiten notas</h1>
-            <table class="table">
-              <tr v-for="item in lista" v-bind:style="item.estado ==false?'color:red':''">
-                <th v-text="item.nombre"></th>
-                <th v-text="item.promedio"></th>
-              </tr>
-            </table>
-          </div>
+      <h3>{{name}}</h3>
 
-        </div>
-        <div class="row">
-          <div class="col-md-12 col-sm-12">
-            <p class="text-center">t.me/gerbi - @gerbidev</p>
-          </div>
-        </div>
-      </div>
+      <label class="" for="">Ingresa tu nombre:</label>
+      <input class="form-control-sm" v-model="name">
+      <p>{{$data}}</p>
     </div>
+  </div>
 
-   
-    
-  </body>
-    <script src="js/vue.js"></script>
-    <script src="js/principal.js"></script>
+
+  <script src="js/vue.js"></script>
+  <script>
+    new Vue({
+        el: '#app',
+        data: {
+            name: 'Hola'
+        }
+    })
+
+  </script>
+</body>
 </html>
