--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>Hola Vue</title>
-  <meta charset="utf-8">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -16,7 +17,6 @@
       <p>{{$data}}</p>
     </div>
   </div>
-
 
   <script src="js/vue.js"></script>
   <script>
