--- a/2.html
+++ b/2.html
@@ -11,7 +11,12 @@
 <div class="container"><br><br>
     <div class="row">
         <div id="app">
-            <h1 v-if="!message">Debes enviar un mensaje de ayuda</h1>
+            <template v-if="!message">
+                <h1>Debes enviar un mensaje de ayuda</h1>
+                <p>Envia un mensaje inme..</p>
+                <p>Reina de corazones</p>
+            </template>
+
             <textarea class="form-control" v-model="message"></textarea><br>
             <button class="btn" v-if="message">Enviar mensaje de ayuda a los aliados</button>
             <pre>
