--- a/codes/2.html
+++ b/codes/2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Hola Vue</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
 
 </head>
 <body>
@@ -25,7 +25,7 @@
 
 </div>
 
-<script src="js/vue.js"></script>
+<script src="../js/vue.js"></script>
 <script>
     new Vue({
         el: '#app',
